Reduce java opts passed to pipeline