@@ -12,9 +12,11 @@ library(
         ]
     )
 )
+//        javaOpts : '-Dserver.port=8092 -XX:TieredStopAtLevel=1 -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -noverify'
 
 completePipeline(
         appPort : '8092',
         appEndpoint : '/actuator/health',
+        javaOpts : '-XX:TieredStopAtLevel=1'
         mainClass : 'com.looseboxes.cometd.chatservice.CometDApplication'
 )
